change theme color

--- a/themes/inside/_config.yml
+++ b/themes/inside/_config.yml
@@ -7,15 +7,15 @@ appearance:
   # Accent color, default '#2a2b33'
   accent_color:
   # Font color, default '#363636'
-  foreground_color:
+  foreground_color: '#d8d8d8'
   # Border color, default '#e0e0e0'
-  border_color:
+  border_color: '#444'
   # body background, default '#f5f7fa'
-  background:
+  background: '#202020'
   # Sidebar background (when opened), default to accent_color
-  sidebar_background:
+  sidebar_background: '#262626'
   # Card background, default '#fff'
-  card_background:
+  card_background: '#252525'
 
   # All background settings above support image, e.g.,
   # '//www.toptal.com/designers/subtlepatterns/patterns/confectionary.png #f5f7fa' or
@@ -56,7 +56,7 @@ appearance:
   # Uses an architecture called "base16" (https://github.com/chriskempson/base16),
   # the default theme is a customized Atelier Dune Light theme,
   # please feel free to explore more.
-  highlight:
+  # highlight:
 
   # Default Light by Chris Kempson (http://chriskempson.com)
   # highlight: [
@@ -82,23 +82,32 @@ appearance:
   #   '#8abeb7', '#81a2be', '#b294bb', '#a3685a'
   # ]
 
+  highlight: [
+    '#252525', '#252525', '#939393', 
+    '#585858', '#b8b8b8', '#d8d8d8', 
+    '#e8e8e8', '#f8f8f8', '#ab4642', 
+    '#dc9656', '#f7ca88', '#a1b56c', 
+    '#b8b8b8', '#7cafc2', '#ba8baf', 
+    '#a16946'
+  ]
+
 # Sidebar profile
 profile:
   # `email` is used for gravatar(https://en.gravatar.com),
   # fallback to `hexo.config.email` if not specified
-  email:
+  email: thewalk_shuai@qq.com
 
   # You can set Avatar URL directly
-  # avatar:
+  avatar: 
 
-  bio: Awesome guy.
+  bio: The whole problem with the world is that fools and fanatics are always so certain of themselves, but wiser people so full of doubts.
 
 # Sidebar navigation links
 menu:
   Home: /
   # About: /about
   # Links: /links
-  # Github: https://github.com/username
+  Github: https://github.com/thewalk
 
 # Social media URL
 # Try to sort by changing the order of the keys
